changed background color for style classes

--- a/style.css
+++ b/style.css
@@ -12,27 +12,27 @@ h1, #designed-by {
 }
 
 .style1 {
-  background-color: #9B9A9A;
+  background-color: #17301c;
 }
 
 .style2 {
-  background-color: #9B9A9A;
+  background-color: #379392;
 }
 
 .style3 {
-  background-color: #9B9A9A;
+  background-color: #4fb0c6;
 }
 
 .style4 {
-  background-color: #9B9A9A;
+  background-color: #4f86c6;
 }
 
 .style5 {
-  background-color: #9B9A9A;
+  background-color: #744fc6;
 }
 
 .style6 {
-  background-color: #9B9A9A;
+  background-color: #6A994E;
 }
 
 /* SETTING THE COLOR OF THE BOX TEXT */
